fix(project-card): adjust min-width for collapsible component on tablet breakpoint

--- a/apps/web-next/src/pages/downloads/ui/projects-card/projects-card.module.scss
+++ b/apps/web-next/src/pages/downloads/ui/projects-card/projects-card.module.scss
@@ -70,6 +70,10 @@
     min-width: 200px;
   }
 
+  @media (max-width: g.$breakpoint-tablet) {
+    min-width: 0px;
+  }
+
   > * {
     max-lines: 1;
   }
